kubernetes/components/pgagent/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgagent-network-policy
spec:
  podSelector:
    matchLabels:
      app: pgagent # Assuming pgagent pods will have this label
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
